# Journey

./: .gitattributes  .gitignore  .tarpaulin.toml  Cargo.toml  README.md  package-lock.json  tarpaulin-report.html  tarpaulin.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0-story.yml  1-epic.yml  epic.yml  misc.yml  story.yml
.github/workflows/: ci.yml  deploy.yml  due-date-reminder.yml  issue-manager.bak  issue-manager.yml  milestone.yml  roadmap.yml  update-epic.yml
api-docs/: index.html  openapi.json
docs/: api-reference.md  index.html  openapi.json  repo-structure.md  tarpaulin-report.html
docs/frontend-codecov/: account.ts.html  index.html  itinerary.ts.html
docs/frontend-codecov/tests/: index.html  testApi.ts.html
frontend/: .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html  main.tsx.html
frontend/docs/: openapi.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: account.ts  home.ts  itinerary.ts  login.ts  signup.ts
frontend/src/assets/: README.md
frontend/src/components/: AboutSection.tsx  AuthLayout.tsx  AuthNavbar.tsx  ChatBox.tsx  ChatMessage.tsx  ChatWindow.tsx  CompactItineraryView.tsx  ContextWindow.tsx  DemoSection.tsx  EventCard.tsx  FinishAccountPopup.tsx  Footer.tsx  GlobalProvider.tsx  HeroSection.tsx  Itinerary.tsx  ItinerarySideBar.tsx  MessageInput.tsx  Navbar.tsx  PrevChatSideBar.tsx  ProtectedLink.tsx  ProtectedRoute.tsx  ReviewsSection.tsx  TeamSection.tsx  Toast.tsx  UnassignedEvents.tsx  UserMessageActions.tsx  ValuesSection.tsx  ViewPageSidebar.tsx
frontend/src/config/: agentProgress.ts
frontend/src/helpers/: Globals.tsx  account.ts  config.ts  global.ts  home.ts  itinerary.ts  populate_itinerary.Ts
frontend/src/models/: account.ts  chat.ts  home.ts  itinerary.ts
frontend/src/pages/: Account.tsx  CreateItinerary.tsx  Globals.tsx  Home.tsx  Index.tsx  IndexPage.tsx  Itineraries.tsx  Login.css  Login.tsx  NotFound.tsx  Preferences.tsx  SignUp.tsx  ViewItinerary.tsx
frontend/src/styles/: Account.css  ChatMessage.css  ChatWindow.css  CompactItineraryView.css  ContextWindow.css  EventCard.css  FinishAccountPopup.css  Footer.css  Home.css  Index.css  (+12 more)
frontend/tests/: customFetch.ts  example.test.ts  genTestApi.js  integration.test.ts  testApi.ts  unit.test.ts
migrations/: 01_migration_script.sql
src/: constants.rs  db.rs  error.rs  global.rs  lib.rs  log.rs  main.rs  middleware.rs  swagger.rs  test.rs  tests.rs
src/agent/: PIPELINE.md  config.rs  external.rs  mod.rs  tools.rs
src/controllers/: account.rs  chat.rs  event.rs  fallback.rs  itinerary.rs  mod.rs
src/http_models/: README.md  account.rs  chat_session.rs  event.rs  examples.rs  itinerary.rs  message.rs  mod.rs
src/models/: README.md  account.rs  event.rs  event_list.rs  intinerary.rs  itinerary.rs  mod.rs
src/sql_models/: README.md  account.rs  event.rs  event_list.rs  itinerary.rs  message.rs  mod.rs
src/tests/: controllers_accounts.rs  models_accounts.rs
tests/: controllers_account.rs  db.rs  integrations.rs  log.rs  models_account.rs
tests/controllers/: account.rs
(+53 files in other folders)
