[package]
name = "Capping2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["macros", "multipart"] }
tower-http = { version = "0.4", features = ["cors"] }
http = "0.2"
tower-cookies = "0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.47.1", features = [ "full" ] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
serde = { version = "1.0.228", features = [ "derive" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
dotenv = "0.15.0"
serde_json = "1.0"
argon2 = "0.5.0"
regex = "1"

[lib]
name = "capping2025"
path = "src/lib.rs"

[[bin]]
name = "Capping2025"
path = "src/main.rs"

[dev-dependencies]
sqlx-cli = "0.8"
tower = "0.4"
serial_test = "3"
anyhow = "1"
httpc-test = "0.1"