[package]
name = "Capping2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["macros", "multipart"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
http = "0.2"
tower-cookies = { version = "0.9", features = ["private","signed"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { version = "1.47.1", features = [ "full" ] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
serde = { version = "1.0.228", features = [ "derive" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
dotenvy = "0.15.7"
serde_json = "1.0"
argon2 = "0.5.0"
regex = "1"

[dev-dependencies]
sqlx-cli = "0.8"
tower = "0.4"
serial_test = "3"
anyhow = "1"
httpc-test = "0.1"
reqwest = { version = "0.11", default-features = true, features = ["json"] }